--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,10 @@ build/Release
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules
 
+# TypeScript build output
+dist/
+*.tsbuildinfo
+
 
 ### Windows template
 # Windows image file caches
