--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "iso-3166-1-alpha-2",
   "version": "1.0.2",
   "description": "Simple module providing ISO-3166-1-alpha-2 country code to english country name lookup and reverse lookup",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc",
+    "clean": "rm -rf dist",
+    "rebuild": "npm run clean && npm run build",
+    "prepare": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -16,8 +21,9 @@
   ],
   "author": "Georg Zoeller",
   "license": "MIT",
-  "dependencies": {
-    "mout": "^1.2.4"
+  "devDependencies": {
+    "@types/node": "^20.0.0",
+    "typescript": "^5.0.0"
   },
   "homepage": "https://github.com/georgzoeller/iso-3166-1-alpha-2",
   "bugs": {
