--- a/package.json
+++ b/package.json
@@ -4,7 +4,20 @@
   "description": "Simple module providing ISO-3166-1-alpha-2 country code to english country name lookup and reverse lookup",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm run build:coffee && npm run build:ts",
+    "build:coffee": "coffee --compile --output . index.coffee",
+    "build:ts": "tsc --outDir dist --declaration --declarationMap --sourceMap src/countries-data.ts",
+    "clean": "rm -rf dist && mkdir dist",
+    "prebuild": "npm run clean",
+    "prepare": "npm run build",
+    "prepack": "npm run build",
+    "docs": "docco index.coffee",
+    "deploy": "npm run build && npm publish",
+    "deploy:dry": "npm run build && npm publish --dry-run",
+    "version:patch": "npm version patch && npm run deploy",
+    "version:minor": "npm version minor && npm run deploy",
+    "version:major": "npm version major && npm run deploy"
   },
   "keywords": [
     "iso-3166-1-alpha-2",
@@ -18,6 +31,11 @@
   "license": "MIT",
   "dependencies": {
     "mout": "^1.2.4"
+  },
+  "devDependencies": {
+    "coffeescript": "^2.7.0",
+    "typescript": "^5.0.0",
+    "docco": "^0.9.1"
   },
   "homepage": "https://github.com/georgzoeller/iso-3166-1-alpha-2",
   "bugs": {
